--- a/ansible/inventories/vagrant/group_vars/all/apps/tool-homer.yml
+++ b/ansible/inventories/vagrant/group_vars/all/apps/tool-homer.yml
@@ -140,9 +140,9 @@ homer_config_services:
         url: "https://esphome.home.intra.{{ web_base_domain }}{{ esphome.context_root }}"
         subtitle: "Control your ESP8266/ESP32"
         target: "_blank"
-      - name: "Zwavejs2Mqtt"
+      - name: "Z-Wave JS UI"
         logo: "assets/dashboard-icons/png/zwavejs2mqtt.png"
-        url: "https://zwavejs2mqtt.home.intra.{{ web_base_domain }}{{ zwavejs2mqtt.context_root }}"
+        url: "https://zwavejsui.home.intra.{{ web_base_domain }}{{ zwavejsui.context_root }}"
         subtitle: "Fully configurable Zwave to MQTT Gateway and Control Panel"
         target: "_blank"
       - name: "Zigbee2MQTT"
