--- a/ansible/install_applications/roles/home_zwavejsui_deploy/meta/main.yml
+++ b/ansible/install_applications/roles/home_zwavejsui_deploy/meta/main.yml
@@ -2,7 +2,7 @@
 galaxy_info:
   author: "Neraud"
   license: MIT
-  description: "Deploy application home-zwavejs2mqtt"
+  description: "Deploy application home-zwave-js-ui"
   min_ansible_version: 2.7
   platforms:
     - name: Debian
