--- a/ansible/install_applications/roles/home_zwavejsui_deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/home_zwavejsui_deploy/tasks/main.yml
@@ -1,13 +1,13 @@
 ---
-- name: Ensure Zwavejs2Mqtt namespace exists
+- name: Ensure Z-Wave JS UI namespace exists
   ansible.builtin.import_tasks: ../../app_base_deploy/tasks/custom-namespace.yml
   vars:
-    application_namespace: "{{ zwavejs2mqtt.namespace }}"
+    application_namespace: "{{ zwavejsui.namespace }}"
 
-- name: Deploy Zwavejs2Mqtt backup script
+- name: Deploy Z-Wave JS UI backup script
   ansible.builtin.import_tasks: ../../app_base_deploy/tasks/backup.yml
   vars:
-    app_backup: "{{ zwavejs2mqtt.app_backup }}"
+    app_backup: "{{ zwavejsui.app_backup }}"
   tags: backup
 
 - name: Ensure BusyBox image is up-to-date in the private registry
@@ -16,13 +16,13 @@
     base_image: "{{ busybox.base_image }}"
     private_image: "{{ busybox.private_image }}"
 
-- name: Ensure Zwavejs2Mqtt image is up-to-date in the private registry
+- name: Ensure Z-Wave JS UI image is up-to-date in the private registry
   ansible.builtin.import_tasks: ../../app_base_deploy/tasks/container-image-private-registry.yml
   vars:
-    base_image: "{{ zwavejs2mqtt.base_image }}"
-    private_image: "{{ zwavejs2mqtt.private_image }}"
+    base_image: "{{ zwavejsui.base_image }}"
+    private_image: "{{ zwavejsui.private_image }}"
 
-- name: Deploy Zwavejs2Mqtt
+- name: Deploy Z-Wave JS UI
   kubernetes.core.k8s:
     definition: "{{ lookup(item | regex_search('.j2$') | ternary('template','file'), item) }}"
     state: present
