--- a/ansible/install_applications/site.yml
+++ b/ansible/install_applications/site.yml
@@ -163,9 +163,9 @@
   tags: kubernetes-app-home-esphome
   when: esphome_enabled | bool
 
-- import_playbook: app-home-zwavejs2mqtt.yml
-  tags: kubernetes-app-home-zwavejs2mqtt
-  when: zwavejs2mqtt_enabled | bool
+- import_playbook: app-home-zwavejsui.yml
+  tags: kubernetes-app-home-zwavejsui
+  when: zwavejsui_enabled | bool
 
 - import_playbook: app-home-zigbee2mqtt.yml
   tags: kubernetes-app-home-zigbee2mqtt
