--- a/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-apps.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-apps.alerts.yaml
@@ -20,7 +20,7 @@
     expr: |
       sum by (namespace, pod, cluster) (
         max by(namespace, pod, cluster) (
-          kube_pod_status_phase{job="kube-state-metrics", phase=~"Pending|Unknown"}
+          kube_pod_status_phase{job="kube-state-metrics", phase=~"Pending|Unknown|Failed"}
         ) * on(namespace, pod, cluster) group_left(owner_kind) topk by(namespace, pod, cluster) (
           1, max by(namespace, pod, owner_kind, cluster) (kube_pod_owner{owner_kind!="Job"})
         )
@@ -217,7 +217,7 @@
       description: HPA {{ $labels.namespace }}/{{ $labels.horizontalpodautoscaler  }}
         has not matched the desired number of replicas for longer than 15 minutes.
       runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubehpareplicasmismatch
-      summary: HPA has not matched descired number of replicas.
+      summary: HPA has not matched desired number of replicas.
     expr: |
       (kube_horizontalpodautoscaler_status_desired_replicas{job="kube-state-metrics"}
         !=
