--- a/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/operator/alertmanagerConfigCustomResourceDefinition.yaml
+++ b/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/operator/alertmanagerConfigCustomResourceDefinition.yaml
@@ -35,7 +35,7 @@ spec:
             description: AlertmanagerConfigSpec is a specification of the desired behavior of the Alertmanager configuration. By definition, the Alertmanager configuration only applies to alerts for which the `namespace` label is equal to the namespace of the AlertmanagerConfig resource.
             properties:
               inhibitRules:
-                description: List of inhibition rules. The rules will only apply to alerts matching the resource’s namespace.
+                description: List of inhibition rules. The rules will only apply to alerts matching the resource's namespace.
                 items:
                   description: InhibitRule defines an inhibition rule that allows to mute alerts when other alerts are already firing. See https://prometheus.io/docs/alerting/latest/configuration/#inhibit_rule
                   properties:
@@ -45,7 +45,7 @@ spec:
                         type: string
                       type: array
                     sourceMatch:
-                      description: Matchers for which one or more alerts have to exist for the inhibition to take effect. The operator enforces that the alert matches the resource’s namespace.
+                      description: Matchers for which one or more alerts have to exist for the inhibition to take effect. The operator enforces that the alert matches the resource's namespace.
                       items:
                         description: Matcher defines how to match on alert's labels.
                         properties:
@@ -72,7 +72,7 @@ spec:
                         type: object
                       type: array
                     targetMatch:
-                      description: Matchers that have to be fulfilled in the alerts to be muted. The operator enforces that the alert matches the resource’s namespace.
+                      description: Matchers that have to be fulfilled in the alerts to be muted. The operator enforces that the alert matches the resource's namespace.
                       items:
                         description: Matcher defines how to match on alert's labels.
                         properties:
@@ -258,7 +258,7 @@ spec:
                             description: TLS configuration
                             properties:
                               ca:
-                                description: Struct containing the CA cert to use for the targets.
+                                description: Certificate authority used when verifying server certificates.
                                 properties:
                                   configMap:
                                     description: ConfigMap containing data to use for the targets.
@@ -294,7 +294,7 @@ spec:
                                     x-kubernetes-map-type: atomic
                                 type: object
                               cert:
-                                description: Struct containing the client cert file for the targets.
+                                description: Client certificate to present when doing client-authentication.
                                 properties:
                                   configMap:
                                     description: ConfigMap containing data to use for the targets.
@@ -571,7 +571,7 @@ spec:
                                 description: TLS configuration for the client.
                                 properties:
                                   ca:
-                                    description: Struct containing the CA cert to use for the targets.
+                                    description: Certificate authority used when verifying server certificates.
                                     properties:
                                       configMap:
                                         description: ConfigMap containing data to use for the targets.
@@ -607,7 +607,7 @@ spec:
                                         x-kubernetes-map-type: atomic
                                     type: object
                                   cert:
-                                    description: Struct containing the client cert file for the targets.
+                                    description: Client certificate to present when doing client-authentication.
                                     properties:
                                       configMap:
                                         description: ConfigMap containing data to use for the targets.
@@ -918,7 +918,7 @@ spec:
                                 description: TLS configuration for the client.
                                 properties:
                                   ca:
-                                    description: Struct containing the CA cert to use for the targets.
+                                    description: Certificate authority used when verifying server certificates.
                                     properties:
                                       configMap:
                                         description: ConfigMap containing data to use for the targets.
@@ -954,7 +954,7 @@ spec:
                                         x-kubernetes-map-type: atomic
                                     type: object
                                   cert:
-                                    description: Struct containing the client cert file for the targets.
+                                    description: Client certificate to present when doing client-authentication.
                                     properties:
                                       configMap:
                                         description: ConfigMap containing data to use for the targets.
@@ -1256,7 +1256,7 @@ spec:
                                 description: TLS configuration for the client.
                                 properties:
                                   ca:
-                                    description: Struct containing the CA cert to use for the targets.
+                                    description: Certificate authority used when verifying server certificates.
                                     properties:
                                       configMap:
                                         description: ConfigMap containing data to use for the targets.
@@ -1292,7 +1292,7 @@ spec:
                                         x-kubernetes-map-type: atomic
                                     type: object
                                   cert:
-                                    description: Struct containing the client cert file for the targets.
+                                    description: Client certificate to present when doing client-authentication.
                                     properties:
                                       configMap:
                                         description: ConfigMap containing data to use for the targets.
@@ -1371,7 +1371,7 @@ spec:
                             description: Notification title.
                             type: string
                           token:
-                            description: The secret's key that contains the registered application’s API token, see https://pushover.net/apps. The secret needs to be in the same namespace as the AlertmanagerConfig object and accessible by the Prometheus Operator.
+                            description: The secret's key that contains the registered application's API token, see https://pushover.net/apps. The secret needs to be in the same namespace as the AlertmanagerConfig object and accessible by the Prometheus Operator.
                             properties:
                               key:
                                 description: The key of the secret to select from.  Must be a valid secret key.
@@ -1392,7 +1392,7 @@ spec:
                             description: A title for supplementary URL, otherwise just the URL is shown
                             type: string
                           userKey:
-                            description: The secret's key that contains the recipient user’s user key. The secret needs to be in the same namespace as the AlertmanagerConfig object and accessible by the Prometheus Operator.
+                            description: The secret's key that contains the recipient user's user key. The secret needs to be in the same namespace as the AlertmanagerConfig object and accessible by the Prometheus Operator.
                             properties:
                               key:
                                 description: The key of the secret to select from.  Must be a valid secret key.
@@ -1657,7 +1657,7 @@ spec:
                                 description: TLS configuration for the client.
                                 properties:
                                   ca:
-                                    description: Struct containing the CA cert to use for the targets.
+                                    description: Certificate authority used when verifying server certificates.
                                     properties:
                                       configMap:
                                         description: ConfigMap containing data to use for the targets.
@@ -1693,7 +1693,7 @@ spec:
                                         x-kubernetes-map-type: atomic
                                     type: object
                                   cert:
-                                    description: Struct containing the client cert file for the targets.
+                                    description: Client certificate to present when doing client-authentication.
                                     properties:
                                       configMap:
                                         description: ConfigMap containing data to use for the targets.
@@ -1957,7 +1957,7 @@ spec:
                                 description: TLS configuration for the client.
                                 properties:
                                   ca:
-                                    description: Struct containing the CA cert to use for the targets.
+                                    description: Certificate authority used when verifying server certificates.
                                     properties:
                                       configMap:
                                         description: ConfigMap containing data to use for the targets.
@@ -1993,7 +1993,7 @@ spec:
                                         x-kubernetes-map-type: atomic
                                     type: object
                                   cert:
-                                    description: Struct containing the client cert file for the targets.
+                                    description: Client certificate to present when doing client-authentication.
                                     properties:
                                       configMap:
                                         description: ConfigMap containing data to use for the targets.
@@ -2308,7 +2308,7 @@ spec:
                                 description: TLS configuration for the client.
                                 properties:
                                   ca:
-                                    description: Struct containing the CA cert to use for the targets.
+                                    description: Certificate authority used when verifying server certificates.
                                     properties:
                                       configMap:
                                         description: ConfigMap containing data to use for the targets.
@@ -2344,7 +2344,7 @@ spec:
                                         x-kubernetes-map-type: atomic
                                     type: object
                                   cert:
-                                    description: Struct containing the client cert file for the targets.
+                                    description: Client certificate to present when doing client-authentication.
                                     properties:
                                       configMap:
                                         description: ConfigMap containing data to use for the targets.
@@ -2622,7 +2622,7 @@ spec:
                                 description: TLS configuration for the client.
                                 properties:
                                   ca:
-                                    description: Struct containing the CA cert to use for the targets.
+                                    description: Certificate authority used when verifying server certificates.
                                     properties:
                                       configMap:
                                         description: ConfigMap containing data to use for the targets.
@@ -2658,7 +2658,7 @@ spec:
                                         x-kubernetes-map-type: atomic
                                     type: object
                                   cert:
-                                    description: Struct containing the client cert file for the targets.
+                                    description: Client certificate to present when doing client-authentication.
                                     properties:
                                       configMap:
                                         description: ConfigMap containing data to use for the targets.
@@ -2900,7 +2900,7 @@ spec:
                                 description: TLS configuration for the client.
                                 properties:
                                   ca:
-                                    description: Struct containing the CA cert to use for the targets.
+                                    description: Certificate authority used when verifying server certificates.
                                     properties:
                                       configMap:
                                         description: ConfigMap containing data to use for the targets.
@@ -2936,7 +2936,7 @@ spec:
                                         x-kubernetes-map-type: atomic
                                     type: object
                                   cert:
-                                    description: Struct containing the client cert file for the targets.
+                                    description: Client certificate to present when doing client-authentication.
                                     properties:
                                       configMap:
                                         description: ConfigMap containing data to use for the targets.
@@ -3212,7 +3212,7 @@ spec:
                                 description: TLS configuration for the client.
                                 properties:
                                   ca:
-                                    description: Struct containing the CA cert to use for the targets.
+                                    description: Certificate authority used when verifying server certificates.
                                     properties:
                                       configMap:
                                         description: ConfigMap containing data to use for the targets.
@@ -3248,7 +3248,7 @@ spec:
                                         x-kubernetes-map-type: atomic
                                     type: object
                                   cert:
-                                    description: Struct containing the client cert file for the targets.
+                                    description: Client certificate to present when doing client-authentication.
                                     properties:
                                       configMap:
                                         description: ConfigMap containing data to use for the targets.
@@ -3328,7 +3328,7 @@ spec:
                   type: object
                 type: array
               route:
-                description: The Alertmanager route definition for alerts matching the resource’s namespace. If present, it will be added to the generated Alertmanager configuration as a first-level route.
+                description: The Alertmanager route definition for alerts matching the resource's namespace. If present, it will be added to the generated Alertmanager configuration as a first-level route.
                 properties:
                   continue:
                     description: Boolean indicating whether an alert should continue matching subsequent sibling nodes. It will always be overridden to true for the first-level route by the Prometheus operator.
@@ -3345,7 +3345,7 @@ spec:
                     description: 'How long to wait before sending the initial notification. Must match the regular expression`^(([0-9]+)y)?(([0-9]+)w)?(([0-9]+)d)?(([0-9]+)h)?(([0-9]+)m)?(([0-9]+)s)?(([0-9]+)ms)?$` Example: "30s"'
                     type: string
                   matchers:
-                    description: 'List of matchers that the alert’s labels should match. For the first level route, the operator removes any existing equality and regexp matcher on the `namespace` label and adds a `namespace: <object namespace>` matcher.'
+                    description: 'List of matchers that the alert''s labels should match. For the first level route, the operator removes any existing equality and regexp matcher on the `namespace` label and adds a `namespace: <object namespace>` matcher.'
                     items:
                       description: Matcher defines how to match on alert's labels.
                       properties:
