--- a/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/operator/podmonitorCustomResourceDefinition.yaml
+++ b/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/operator/podmonitorCustomResourceDefinition.yaml
@@ -151,6 +151,9 @@ spec:
                     enableHttp2:
                       description: Whether to enable HTTP2.
                       type: boolean
+                    filterRunning:
+                      description: 'Drop pods that are not running. (Failed, Succeeded). Enabled by default. More info: https://kubernetes.io/docs/concepts/workloads/pods/pod-lifecycle/#pod-phase'
+                      type: boolean
                     followRedirects:
                       description: FollowRedirects configures whether scrape requests follow HTTP 3xx redirects.
                       type: boolean
@@ -377,7 +380,7 @@ spec:
                       description: TLS configuration to use when scraping the endpoint.
                       properties:
                         ca:
-                          description: Struct containing the CA cert to use for the targets.
+                          description: Certificate authority used when verifying server certificates.
                           properties:
                             configMap:
                               description: ConfigMap containing data to use for the targets.
@@ -413,7 +416,7 @@ spec:
                               x-kubernetes-map-type: atomic
                           type: object
                         cert:
-                          description: Struct containing the client cert file for the targets.
+                          description: Client certificate to present when doing client-authentication.
                           properties:
                             configMap:
                               description: ConfigMap containing data to use for the targets.
