--- a/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/operator/servicemonitorCustomResourceDefinition.yaml
+++ b/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/operator/servicemonitorCustomResourceDefinition.yaml
@@ -346,7 +346,7 @@ spec:
                       description: TLS configuration to use when scraping the endpoint
                       properties:
                         ca:
-                          description: Struct containing the CA cert to use for the targets.
+                          description: Certificate authority used when verifying server certificates.
                           properties:
                             configMap:
                               description: ConfigMap containing data to use for the targets.
@@ -385,7 +385,7 @@ spec:
                           description: Path to the CA cert in the Prometheus container to use for the targets.
                           type: string
                         cert:
-                          description: Struct containing the client cert file for the targets.
+                          description: Client certificate to present when doing client-authentication.
                           properties:
                             configMap:
                               description: ConfigMap containing data to use for the targets.
