Update kube-prometheus generator

--- a/helpers/kube-prometheus-generator/Dockerfile
+++ b/helpers/kube-prometheus-generator/Dockerfile
@@ -1,15 +1,15 @@
-FROM docker.io/library/golang:1.14.5-alpine3.12
+FROM docker.io/library/golang:1.19.2-alpine3.16
 
 RUN apk add --no-cache git
 
 RUN echo "Install go-jsonnet" && \
-    go get github.com/google/go-jsonnet/cmd/jsonnet
+    go install github.com/google/go-jsonnet/cmd/jsonnet@latest
 
 RUN echo "Install jsonnet-bundler" && \
-    go get github.com/jsonnet-bundler/jsonnet-bundler/cmd/jb
+    go install github.com/jsonnet-bundler/jsonnet-bundler/cmd/jb@latest
 
 RUN echo "Install gojsontoyaml" && \
-    go get github.com/brancz/gojsontoyaml
+    go install github.com/brancz/gojsontoyaml@latest
 
 RUN mkdir /out
 VOLUME /out
