--- a/ansible/inventories/vagrant/group_vars/all/apps/tool-homer.yml
+++ b/ansible/inventories/vagrant/group_vars/all/apps/tool-homer.yml
@@ -6,9 +6,7 @@ homer_config_logo: "logo.png"
 # Optional message
 homer_config_message:
   title: "Welcome !"
-  content: |
-    This dashboard is configured to list the applications deployed on the Kubernetes cluster. 
-    If promted, the credentials are usually : user_ldap / Passw0rd
+  content: "This dashboard is configured to list the applications deployed on the Kubernetes cluster. If promted, the credentials are usually : user_ldap / Passw0rd"
   style: "is-dark"
 
 # Optional navbar
