--- a/ansible/install_applications/vars/home-nodered.yml
+++ b/ansible/install_applications/vars/home-nodered.yml
@@ -6,6 +6,7 @@ _nodered_var_loader:
     repo: "docker.io"
     name: "nodered/node-red"
     tag: "3.0.2-18-minimal"
+  private_suffix: "custom-2"
 
 nodered:
   enabled: "{{ nodered_enabled | default(True) }}"
@@ -15,7 +16,7 @@ nodered:
   private_image:
     repo: "{{ docker_private_registry.url }}"
     name: "{{ _nodered_var_loader.base_image.name | regex_replace('.*/', '') }}"
-    tag: "{{ _nodered_var_loader.base_image.tag }}-custom"
+    tag: "{{ _nodered_var_loader.base_image.tag }}-{{ _nodered_var_loader.private_suffix }}"
 
   app_backup:
     name: home-nodered
@@ -55,7 +56,7 @@ nodered:
     ldapauth_fork:
       version: 5.0.5
     node_red_contrib_home_assistant_websocket:
-      version: 0.44.0
+      version: 0.46.2
     node_red_contrib_time_range_switch:
       version: 1.1.3
     node_red_contrib_stoptimer:
